k8s/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: video-demo-deployment
  labels:
    app: video-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-demo
  template:
    metadata:
      labels:
        app: video-demo
    spec:
      containers:
      - name: video-demo
        image: gcr.io/valiant-well-247509/github.com/walamsyah/video-demo:a1231eb
        ports:
        - containerPort: 3000
